--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <h1> {{ message }} </h1>
 </div>
 
-<script src="https://unpkg.com/vue@2.1.6/dist/vue.js"></script>
+<script src="vue.js"></script>
 
 
 <script type="text/javascript">
